# Sanctifier

./: .sanctifier_cache.json  .sanctify.toml  BRANCH_PROTECTION.md  CONTRIBUTING.md  Cargo.lock.upstream  Cargo.toml  Makefile  README.md  action.yml  clippy_cli_output.txt  clippy_output.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: benchmarks.yml  ci.yml  soroban-deploy.yml  soroban-examples.yml
contracts/amm-pool/src/: lib.rs
contracts/amm-pool/tests/: integration_tests.rs  proptest_amm.rs
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs
contracts/kani-poc/: Cargo.toml
contracts/multisig/: Cargo.toml
contracts/multisig/src/: test.rs
contracts/my-contract/: .sanctify.toml  Cargo.toml
contracts/my-contract/src/: lib.rs
contracts/my-contract/tests/: bolero_fuzz.rs  integration_tests.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/reentrancy-guardian/: Cargo.toml
contracts/reentrancy-guardian/src/: lib.rs
contracts/reentrancy-guardian/test_snapshots/test/: test_exit_releases_lock.1.json  test_lock_blocks_reentry.1.json  test_nonce_mismatch_fails.1.json  test_standard_flow.1.json
contracts/runtime-guard-wrapper/src/: lib.rs
contracts/runtime-guard-wrapper/tests/: integration_tests.rs
contracts/timelock/src/: test.rs
contracts/vesting/: Cargo.toml
contracts/vesting/src/: test.rs
contracts/vulnerable-contract/: .sanctifier_cache.json  Cargo.toml
contracts/vulnerable-contract/src/: lib.rs
docs/: Contributing-analysis-rules.MD  DEPLOYMENT_IMPLEMENTATION.md  Decentralized-pause-mechanism.MD  error-codes.md  formal-verification-video-series.md  getting-started.md  reentrancy-guardian.md  soroban-deployment.md  tutorial.md  vulnerability-database-format.md
docs/case-studies/: soroban-examples.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/.husky/: pre-commit
frontend/app/: error.tsx  not-found.tsx  types.ts
frontend/app/api/analyze/: route.ts
frontend/app/components/: ErrorBoundary.stories.tsx  ErrorBoundary.tsx  FindingsList.stories.tsx  FindingsList.test.tsx  KaniMetricsWidget.tsx  LoadingSpinner.tsx  SanctityScore.test.tsx  SeverityFilter.test.tsx  SummaryChart.test.tsx  SymbolicGraphWidget.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/lib/: export-pdf.ts  transform.ts  wasm.ts
frontend/app/terminal/: layout.tsx
frontend/tests/e2e/: contract-analysis.spec.ts
frontend/tests/e2e/fixtures/: vulnerable-contract.rs
scripts/: analyze-soroban-examples.py
tooling/sanctifier-cli/: .sanctify.toml  Cargo.toml
tooling/sanctifier-cli/data/: vulnerability-db.json
tooling/sanctifier-cli/src/: lib.rs  llm.rs  logging.rs  main.rs  vulndb.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  complexity.rs  fix.rs  init.rs  mod.rs  report.rs  update.rs  webhook.rs
tooling/sanctifier-cli/src/rules/: tests.rs
tooling/sanctifier-cli/tests/: cli_tests.rs  llm_tests.rs  shared_fixtures.rs
tooling/sanctifier-cli/tests/fixtures/: .sanctifier_cache.json
tooling/sanctifier-cli/tests/vulndb/: auth_admin_example.rs  custom-vulndb.json  minimal-vulndb.json  todo_example.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/src/: complexity.rs  finding_codes.rs  gas_estimator.rs  kani_bridge.rs  lib.rs  reentrancy.rs  sep41.rs  symbolic.rs  zk_proof.rs
tooling/sanctifier-core/src/rules/: arithmetic_overflow.rs  auth_gap.rs  instance_storage_misuse.rs  ledger_size.rs  mod.rs  panic_detection.rs  variable_shadowing.rs
tooling/sanctifier-core/tests/: integration_token_test.rs
tooling/sanctifier-sdk/: Cargo.toml
tooling/sanctifier-sdk/src/: lib.rs
tooling/sanctifier-sdk/test_snapshots/: test_env_guard_panic.1.json
tooling/sanctifier-sdk/tests/: macro_test.rs
tooling/sanctifier-wasm/: Cargo.toml
tooling/sanctifier-wasm/src/: lib.rs
