[workspace]
members = [
    "tooling/sanctifier-core",
    "tooling/sanctifier-cli",
    "tooling/sanctifier-wasm",
    "contracts/vulnerable-contract",
    "contracts/token-with-bugs",
    "contracts/amm-pool",
    "contracts/reentrancy-guard",
    "contracts/runtime-guard-wrapper",
    "contracts/kani-poc",
    "contracts/my-contract",
    "contracts/bridge",
    "contracts/oracle",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.7.6" }

[workspace.package]
rust-version = "1.78"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
