[package]
name = "kani-poc-contract"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
soroban-sdk = "20.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
