[package]
name = "sanctifier-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Sanctifier - Stellar Soroban Security Suite"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
sanctifier-core = { path = "../sanctifier-core" }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"


[[bin]]
name = "sanctifier"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"


