[package]
name = "sanctifier-core"
version = "0.1.0"
edition = "2021"
description = "Core analysis logic for Sanctifier"
license = "MIT"

[dependencies]
soroban-sdk = "20.0.0" # Target latest Soroban SDK

syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10.3"