[package]
name = "sanctifier-sdk"
version = "0.1.0"
edition = "2021"
description = "Run-time invariant guarding and formal verification bridge for Sanctifier"

[lints]
workspace = true

[dependencies]
soroban-sdk = { version = "20.0.0", optional = true }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = []
soroban = ["dep:soroban-sdk"]
